@@ -1,3 +1,11 @@
+opsi-script-beautifier (4.2.0.4-1)
+
+ * fix EndFunc detection
+ * fix indentation of indented opsiservicecall section (e.g. inside deffunc)
+
+-- d.oertel <d.oertel@uib.de> Fri , 23 Sep 2022 15:00:00 + 0100
+
+
 opsi-script-beautifier (4.2.0.3-1)
 
  * accept *.opsiinc as opsi-script extension
